--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kaaaxcreators-create",
+  "name": "@kaaaxcreators/create",
   "version": "1.0.0",
   "description": "Basic Typescript ESLint Template",
   "main": "dist/index.js",
@@ -19,7 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@kaaaxcreators/config": "^1.1.1",
-    "@types/node": "^16.7.5",
+    "@types/node": "^16.7.6",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
